# tributum-back

./: .bandit  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.test-parallel.yml  docker-compose.test.yml  docker-compose.yml  main.py  plan.md  pyproject.toml  pyrightconfig.json  vulture_whitelist.py
.claude/commands/: analyze-project.md  analyze.md  check-git.md  check-implementation-new.md  check-implementation.md  commit.md  create-commit.md  create-readme.md  create-release.md  curate-makefile.md  do-find-patterns.md  do-new.md  do.md  enforce-quality.md  fix-unittest-mocks.md  git-backup.md  git-understand.md  investigate-deps.md  qa-tests-missing-integration.md  readme.md  refactor-tests.md  release.md  start-with-git.md  start.md  t1-do-implementation.md  t1-fix-implementation.md  t1-what-to-test.md  task-review.md  tasks-breakdown.md  tasks-project-analysis.md  tasks-review.md  update-module-docstrings.md  validate-deps-git.md  validate-quality-git.md  validate-tests-git.md
.github/workflows/: checks.yml
.specs/: constants-refactor.md  fastapi_best_practices.md  plan.md  simplification.md  testing-philosophy.md
.specs/analysis/: DATABASE_OBSERVABILITY_ANALYSIS.md  ERROR_HANDLING_ANALYSIS.md  OBSERVABILITY_ANALYSIS.md  OBSERVABILITY_CODE_REVIEW.md
.specs/anti_patterns/: integration.md  unit.md
.specs/logs-enhancement/: 01-foundation-configuration.md  02-performance-monitoring.md  03-security-data-filtering.md  04-scalability-async.md  05-external-integrations.md  06-advanced-features.md
.specs/patterns/: code_patterns.md  test_unit_patterns.md
.specs/simplification/: README.md  phase-0-cleanup-preparation.md  phase-1-core-logging-loguru.md  phase-2-request-context-middleware.md  phase-3-cloud-agnostic-formatters.md  phase-4-simplified-error-context.md  phase-5-native-opentelemetry.md  phase-6-configuration-integration.md
.specs/testing-reqs/: core-config-py-unit-tests.md  core-context-py-unit-tests.md  main-py-unit-tests.md
docker/app/: Dockerfile  Dockerfile.dev
docker/postgres/: init.sql
docker/scripts/: entrypoint.sh  migrate.sh  wait-for-postgres.sh
migrations/: env.py
migrations/versions/: 20250623_1144_1e32d8f148c9_initial_empty_migration.py
scripts/: check-mock-imports.py  check-test-markers.py  run_tool.py  tool
src/: __init__.py
src/api/: __init__.py  constants.py  main.py
src/api/middleware/: __init__.py  error_handler.py  request_context.py  request_logging.py  security_headers.py
src/api/schemas/: __init__.py  errors.py
src/api/utils/: __init__.py  responses.py
src/core/: __init__.py  config.py  constants.py  context.py  error_context.py  exceptions.py  logging.py  observability.py  types.py
src/infrastructure/: __init__.py  constants.py
src/infrastructure/database/: __init__.py  base.py  dependencies.py  repository.py  session.py
stubs/opentelemetry/: __init__.pyi
stubs/opentelemetry/exporter/: __init__.pyi  cloud_trace.pyi
stubs/opentelemetry/instrumentation/fastapi/: __init__.pyi
stubs/opentelemetry/instrumentation/sqlalchemy/: __init__.pyi
stubs/opentelemetry/sdk/: __init__.pyi
stubs/opentelemetry/sdk/resources/: __init__.pyi
stubs/opentelemetry/sdk/trace/: __init__.pyi
stubs/opentelemetry/trace/: __init__.pyi
stubs/pytest_check/: __init__.pyi
terraform/: README.md  backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/: README.md  main.tf  outputs.tf  variables.tf
terraform/environments/dev/: main.tf  outputs.tf  variables.tf
terraform/environments/production/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/environments/staging/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py
tests/fixtures/: test_database_fixtures.py  test_docker_fixtures.py  test_env_fixtures.py
tests/integration/: __init__.py  conftest.py  test_api.py  test_config_integration.py  test_database_example.py  test_database_query_tracking.py  test_docker_compose.py  test_fixture_isolation.py  test_full_stack.py  test_observability_integration.py
tests/integration/api/: test_application_lifespan.py  test_error_handling.py  test_lifecycle.py  test_main_coverage.py  test_main_simple_coverage.py  test_metrics_collection.py  test_middleware_integration.py  test_orjson_integration.py  test_request_logging_integration.py  test_system_metrics_task.py  test_tracing.py
tests/integration/api/error_handling/: __init__.py  conftest.py  test_error_handler_type_errors.py  test_error_handling_security.py  test_error_response_format.py  test_generic_exceptions.py  test_http_exceptions.py  test_tributum_errors.py  test_validation_errors.py
tests/integration/database/: test_models.py  test_repository_operations.py  test_session_management.py
tests/integration/fixtures/: test_database_fixtures.py  test_docker_fixtures.py
tests/unit/: __init__.py  conftest.py  test_docker_compose.py  test_docker_structure.py  test_main.py
tests/unit/api/: __init__.py  conftest.py  test_constants.py  test_main.py
tests/unit/api/middleware/: conftest.py  test_error_handler.py  test_error_handler_tracing.py  test_request_context.py  test_request_logging.py  test_request_logging_production.py  test_security_headers.py
tests/unit/api/schemas/: test_errors.py
tests/unit/api/utils/: __init__.py  conftest.py  test_responses.py
tests/unit/core/: test_config.py  test_constants.py  test_context.py  test_error_context.py  test_error_context_typing.py  test_exceptions.py  test_exceptions_properties.py  test_log_formatters.py  test_logging.py  test_logging_basic.py  test_logging_edge_cases.py  test_logging_gcp_formatter.py  test_observability.py  test_observability_edge_cases.py  test_orjson_import_error.py  test_types.py
tests/unit/core/config/: __init__.py  test_auto_detection.py  test_config.py  test_database_config.py  test_get_settings.py  test_log_config.py  test_observability_config.py  test_settings.py  (+1 more)
(+30 files in other folders)
